--- a/app/code/Macademy/Blog/view/frontend/templates/post/list.phtml
+++ b/app/code/Macademy/Blog/view/frontend/templates/post/list.phtml
@@ -1,13 +1,19 @@
 <?php
 /** @var Magento\Framework\View\Element\Template $block */
+/** @var Macademy\Blog\ViewModel\Post $postVm */
+$postVm = $block->getData('post_vm');
 ?>
 
 <div class="blog-post-list">
     <h1><?= __('Blog posts') ?></h1>
     <ul>
-        <li><a href="<?= $block->getUrl('blog/post/detail', ['id' => 1])?>">Post 1</a></li>
-        <li><a href="<?= $block->getUrl('blog/post/detail', ['id' => 2])?>">Post 2</a></li>
-        <li><a href="<?= $block->getUrl('blog/post/detail', ['id' => 3])?>">Post 3</a></li>
+        <?php foreach($postVm->getList() as $post): ?>
+            <li>
+                <a href="<?= $block->getUrl('blog/post/detail', ['id' => $post->getId()]) ?>">
+                    <?= $post->getTitle() ?>
+                </a>
+            </li>
+        <?php endforeach; ?>
     </ul>
     <p><?= __('Post count: %1', 3) ?></p>
 </div>
