adding sidebar db data

--- a/app/code/Macademy/Blog/view/frontend/layout/blog_post_detail.xml
+++ b/app/code/Macademy/Blog/view/frontend/layout/blog_post_detail.xml
@@ -5,7 +5,11 @@
             <block name="blog.post.detail" template="Macademy_Blog::post/detail.phtml" />
         </referenceContainer>
         <referenceContainer name ="sidebar.main">
-            <block name="blog.post.sidebar" template="Macademy_Blog::post/sidebar.phtml" />
+            <block name="blog.post.sidebar" template="Macademy_Blog::post/sidebar.phtml">
+                <arguments>
+                    <argument name="post_vm" xsi:type="object">Macademy\Blog\ViewModel\Post</argument>
+                </arguments>
+            </block>
         </referenceContainer>
         <move element="wishlist_sidebar" destination="sidebar.additional" before="catalog.compare.sidebar" />
         <referenceBlock name="catalog.compare.sidebar" display="false" />
