--- a/app/code/Macademy/Blog/view/frontend/layout/blog_post_detail.xml
+++ b/app/code/Macademy/Blog/view/frontend/layout/blog_post_detail.xml
@@ -2,7 +2,11 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-right"  xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name ="main">
-            <block name="blog.post.detail" template="Macademy_Blog::post/detail.phtml" />
+            <block name="blog.post.detail" template="Macademy_Blog::post/detail.phtml">
+                <arguments>
+                    <argument name="post_vm" xsi:type="object">Macademy\Blog\ViewModel\Post</argument>
+                </arguments>
+            </block>
         </referenceContainer>
         <referenceContainer name ="sidebar.main">
             <block name="blog.post.sidebar" template="Macademy_Blog::post/sidebar.phtml">
