--- a/app/code/Macademy/Blog/view/frontend/templates/post/detail.phtml
+++ b/app/code/Macademy/Blog/view/frontend/templates/post/detail.phtml
@@ -1,5 +1,11 @@
+<?php
+/** @var Magento\Fremework\View\Element\Template $block */
+/** @var Macademy\Blog\ViewModel\Post $postVm */
+$postVm = $block->getData('post_vm');
+$post = $postVm->getDetail();
+?>
 <div class="blog-post-detail">
-    <h1><?= __('Title') ?></h1>
-    <p><em><?= __('Created at %1', '1991-01-01') ?></em></p>
-    <p><?= __('Lorem Ipsum Dolor') ?></p>
+    <h1><?= $post->getTitle() ?></h1>
+    <p><em><?= __('Created at %1', $post->getCreatedAt()) ?></em></p>
+    <p><?= $post->getContent() ?></p>
 </div>
