--- a/app/code/Blizzard/Warcraft/view/frontend/layout/customer_account.xml
+++ b/app/code/Blizzard/Warcraft/view/frontend/layout/customer_account.xml
@@ -4,7 +4,7 @@
         <referenceBlock name="customer_account_navigation">
             <block class="Magento\Framework\View\Element\Html\Link\Current" name="customer-account-navigation-warcraft-link">
                 <arguments>
-                    <argument name="path" xsi:type="string">warcraft/account/index</argument>
+                    <argument name="path" xsi:type="string">warcraft/account</argument>
                     <argument name="label" xsi:type="string">Warcraft</argument>
                 </arguments>
             </block>
