--- a/app/code/Blizzard/Warcraft/view/frontend/templates/account/warcraft.phtml
+++ b/app/code/Blizzard/Warcraft/view/frontend/templates/account/warcraft.phtml
@@ -1,9 +1,7 @@
 <?php
-/**
- * @var \Blizzard\Warcraft\Block\Account\Warcraft $block
- */
-
+/** @var \Blizzard\Warcraft\Block\Account\Warcraft $block */
 $customerCharacter = $block->getCustomerCharacter();
+
 if ($customerCharacter):
 ?>
     <h2><?= __('Character Information') ?></h2>
@@ -13,11 +11,10 @@ if ($customerCharacter):
         <li><?= __('Promotion: %1', $customerCharacter['promotion'] ?? __('None')) ?></li>
     </ul>
 <?php else: ?>
-    <form action="<?= $block->getUrl('warcraft/account/createCharacter') ?>" method="post">
+    <form action="<?= $block->getUrl('warcraft/account/character') ?>">
         <input name="form_key" type="hidden" value="<?= $block->getFormKey() ?>"/>
         <button type="submit" class="action primary">
             <span><?= __('Create Character') ?></span>
         </button>
     </form>
 <?php endif; ?>
-
